--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"devDependencies": {
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
+		"prettier": "3.5.2",
 		"typescript": "^5.7.3"
 	},
 	"engines": {
@@ -15,6 +16,7 @@
 		"pnpm": ">=10"
 	},
 	"prettier": {
+		"endOfLine": "auto",
 		"useTabs": true
 	},
 	"private": true,
