--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"dependencies": {
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-server-dom-webpack": "^19.0.0",
-		"waku": "^0.21.21"
+		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react": "^4.3.4",
 		"prettier": "3.5.2",
-		"typescript": "^5.7.3"
+		"typescript": "^5.7.3",
+		"vite": "^6.2.0"
 	},
 	"engines": {
 		"node": ">=22",
@@ -27,9 +27,9 @@
 		]
 	},
 	"scripts": {
-		"build": "waku build",
-		"dev": "waku dev",
-		"start": "waku start"
+		"build": "tsc --build && vite build",
+		"dev": "vite dev",
+		"preview": "vite preview"
 	},
 	"type": "module"
 }
